# conference-minds

./: LICENSE  PUBLISHING.md  README.md  SKILL.md  package.json  pyproject.toml
scripts/: __init__.py  cli.py  mcp_server.py
src/: __init__.py  core.py
tests/: test_basic.py
